--- a/package.json
+++ b/package.json
@@ -16,8 +16,12 @@
   },
   "license": "0BSD",
   "dependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.18.0",
+    "@typescript-eslint/parser": "^4.18.0",
     "gatsby": "^3.0.1",
+    "gatsby-plugin-typescript": "^3.1.0",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "typescript": "^4.2.3"
   }
 }
