--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
   },
   "license": "0BSD",
   "dependencies": {
+    "@contentful/rich-text-react-renderer": "^14.1.3",
+    "@contentful/rich-text-types": "^15.0.0",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
     "gatsby": "^3.0.1",
     "gatsby-plugin-typescript": "^3.1.0",
+    "gatsby-source-contentful": "^5.1.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "typescript": "^4.2.3"
